--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.CourseApplication"
         tools:targetApi="31">
         <activity
+            android:name=".UserListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddUserActivity"
+            android:exported="false" />
+        <activity
             android:name=".AcceuilActivity"
             android:exported="false" />
         <activity
